--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,5 +15,6 @@ spec:
       containers:
       - name: myapp
         image: us-central1-docker.pkg.dev/summer-nexus-468907-t1/jenkins-gke-repo/myapp:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
