--- a/cloudbuild-deploy.yaml
+++ b/cloudbuild-deploy.yaml
@@ -18,7 +18,7 @@ steps:
       [
         'apply',
         '-f',
-        'k8s-deployment.yaml'
+        'deployment.yaml'
       ]
 
   # Step 3: Deploy Service
@@ -30,7 +30,7 @@ steps:
       [
         'apply',
         '-f',
-        'k8s-service.yaml'
+        'service.yaml'
       ]
 
 options:
